# Cpp-Projects

./: .gitignore  CMakeLists.txt  ReactorSim.md  vcpkg.json
A1PA/: CMakeLists.txt  main.cpp  main.hpp
A1PB/: CMakeLists.txt  Utility.h  main.cpp
A1PB/.run/: A1PB.run.xml
A2PA/: A02 - C++ Collections.docx  CMakeLists.txt  game.cpp  main.cpp
A2PA/Bioinformatics/: Bioinformatics.cpp  Bioinformatics.h
A2PB/: CMakeLists.txt  ControlPanelWidget.cpp  ControlPanelWidget.h  Game.cpp  Game.hpp  game.cpp  game.hpp
A3PA/: CMakeLists.txt  README.md  frog_and_toads.cpp
A3PA/FrogAndToadFiles/: ansi_view.hpp  console_controller.cpp  console_controller.hpp  console_view.hpp  interfaces.hpp  raylib_controller.cpp  raylib_controller.hpp  raylib_view.cpp  raylib_view.hpp
Assignment1/: CMakeLists.txt  main.cpp
FirstTest/: main.cpp
ReactorSim/: CMakeLists.txt  main.cpp
ReactorSim/Classes/: CanvasManager.cpp  CanvasManager.h  Dial.cpp  Dial.h  GameManager.cpp  GameManager.h  Instrument.cpp  Instrument.h  Slider.cpp  Slider.h
ReactorSim/Classes/Reactor/: Coolant.cpp  Coolant.h  Reactor.cpp  Reactor.h  ReactorManager.cpp  ReactorManager.h  Turbine.cpp  Turbine.h
ReactorSim/Reference/: ClassDiagram.mermaid  Polish.md  ProjectTracker.xlsx  reactor_proposal_v2.md
